[project]
name = "src"
version = "0.1.0"
description = "Proyecto Final de Sistemas Multiagentes: Path Planning con ACO para Optimización de Reconstrucciones 3D."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "open3d>=0.19.0",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "pyvista>=0.48.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
